Improved the file uploader for inventory pictures. Fixed a bug that causes a syntax error when saving products to inventory. Organized image repository. Inventory files must be in PNG format now.

--- a/Gemma/src/com/gemma/spring/web/messages/messages.properties
+++ b/Gemma/src/com/gemma/spring/web/messages/messages.properties
@@ -22,5 +22,5 @@ Size.inventory.productName = Product Name must be between {2} and {1} characters
 Size.inventory.description = Product description must be between {2} and {1} characters long.
 NotBlank.chartOfAccounts.accountNum = Account number cannot be blank.
 Size.chartOfAccount.accountName = Account name must be between {2} and {1} characters long.
-
+Unsupported.fileUpload.file = "Unsupported file type."
 
