Refactored DatePicker and FileUpload Objects and put them into com.gemma.web.beans Added a File page for order processing

--- a/Gemma/src/com/gemma/spring/web/messages/messages.properties
+++ b/Gemma/src/com/gemma/spring/web/messages/messages.properties
@@ -23,4 +23,4 @@ Size.inventory.description = Product description must be between {2} and {1} cha
 NotBlank.chartOfAccounts.accountNum = Account number cannot be blank.
 Size.chartOfAccount.accountName = Account name must be between {2} and {1} characters long.
 Unsupported.fileUpload.file = "Unsupported file type."
-Min.invoiceItem.amount = "The quantity must be bigger than 0."
+Min.invoiceItem.amount = "The quantity must be greater than 0."
