Added a screen to return product. I still need to add the approval screen.

--- a/Gemma/src/com/gemma/web/messages/messages.properties
+++ b/Gemma/src/com/gemma/web/messages/messages.properties
@@ -24,4 +24,6 @@ NotBlank.chartOfAccounts.accountNum = Account number cannot be blank.
 Size.chartOfAccount.accountName = Account name must be between {2} and {1} characters long.
 Unsupported.fileUpload.file = "Unsupported file type."
 Min.invoiceItem.amount = "The quantity must be greater than 0."
-Invalid.inventory.skuNum = "Invalid Product code.";
+Invalid.inventory.skuNum = "Invalid Product code."
+Amount.returns.amtReturned = "Amount returned exceeds amount purchased"
+NotFound.returns.invoiceNum = "Invoice Item not found."
