--- a/Gemma/src/com/gemma/web/messages/messages.properties
+++ b/Gemma/src/com/gemma/web/messages/messages.properties
@@ -27,3 +27,4 @@ Min.invoiceItem.amount = "The quantity must be greater than 0."
 Invalid.inventory.skuNum = "Invalid Product code."
 Amount.returns.amtReturned = "Amount returned exceeds amount purchased"
 NotFound.returns.invoiceNum = "Invoice Item not found."
+NotBlank.returns.reason = "You must have a valid reason for returning this product."
