Added the next generation Fetal interpreter (that processes if statements). Fixed minor bugs Did some project cleaning.

--- a/Gemma/src/com/gemma/web/messages/messages.properties
+++ b/Gemma/src/com/gemma/web/messages/messages.properties
@@ -21,6 +21,7 @@ NotBlank.inventory.skuNum = SKU Number cannot be blank.
 Size.inventory.productName = Product Name must be between {2} and {1} characters long.
 Size.inventory.description = Product description must be between {2} and {1} characters long.
 NotBlank.chartOfAccounts.accountNum = Account number cannot be blank.
+DuplicateKey.chartOfAccounts.accountNum = That account number already exists.
 Size.chartOfAccount.accountName = Account name must be between {2} and {1} characters long.
 Unsupported.fileUpload.file = "Unsupported file type."
 Min.invoiceItem.amount = "The quantity must be greater than 0."
