Added multiple currencies

--- a/Gemma/src/com/gemma/web/messages/messages.properties
+++ b/Gemma/src/com/gemma/web/messages/messages.properties
@@ -1,5 +1,7 @@
 Size.userProfile.firstname = First Name must be between {2} and {1} characters long.
 NotBlank.userProfile.firstname = First Name cannot be blank.
+Size.userProfile.country = Use a 3 digit country code.
+Size.userProfile.country = You must select a 3 digit currency code.
 Size.userProfile.lastname = Last Name must be between {2} and {1} characters long.
 NotBlank.userProfile.lastname = Last Name cannot be blank
 NotBlank.userProfile.address1 = Street address cannot be blank.
