Added email verification when a new user signs up.

--- a/Gemma/src/com/peachy/web/messages/messages.properties
+++ b/Gemma/src/com/peachy/web/messages/messages.properties
@@ -1,4 +1,4 @@
-Size.userProfile.firstname = First Name must be between {2} and {1} characters long.
+Size.userProfile.firstname = First Name must be between 3 and 30 characters long.
 NotBlank.userProfile.firstname = First Name cannot be blank.
 Size.userProfile.country = Use a 3 digit country code.
 Size.userProfile.country = You must select a 3 digit currency code.
