--- a/Gemma/src/com/peachy/web/messages/messages.properties
+++ b/Gemma/src/com/peachy/web/messages/messages.properties
@@ -1,7 +1,6 @@
-Size.userProfile.firstname = First Name must be between 3 and 30 characters long.
+Size.userProfile.firstname = First Name must be between {2} and {1} characters long.
 NotBlank.userProfile.firstname = First Name cannot be blank.
 Size.userProfile.country = Use a 3 digit country code.
-Size.userProfile.country = You must select a 3 digit currency code.
 Size.userProfile.lastname = Last Name must be between {2} and {1} characters long.
 NotBlank.userProfile.lastname = Last Name cannot be blank
 NotBlank.userProfile.address1 = Street address cannot be blank.
@@ -9,11 +8,11 @@ NotBlank.userProfile.city = City cannot be blank.
 NotBlank.userProfile.region = State (or Region) cannot be blank.
 NotBlank.userProfile.postalCode = Postal Code cannot be blank.
 NotBlank.userProfile.country = Country cannot be blank.
-
+NotBlank.userProfile.currency = Please Select a currency.
 DuplicateKey.userProfile.username = User Profile exists. Please log in.
 Duplicate.inventory.skuNum = A product already exists with that SKU number.
-NotBlank.userProfile.password = Password cannot be blank.
-
+Password.userProfile.password = Password must at least have 1 uppercase letter, 1 number and 1 special character.
+NotNull.userProfile.maleFemale = Please select male of female.
 NotBlank.userProfile.username = Email cannot be blank.
 Email.userProfile.username = This does not appear to be a valid email address.
 NotBlank.userProfile.paymentCard = Payment card cannot be blank.
