--- a/Gemma/src/com/peachy/web/messages/messages.properties
+++ b/Gemma/src/com/peachy/web/messages/messages.properties
@@ -9,6 +9,7 @@ NotBlank.userProfile.city = City cannot be blank.
 NotBlank.userProfile.region = State (or Region) cannot be blank.
 NotBlank.userProfile.postalCode = Postal Code cannot be blank.
 NotBlank.userProfile.country = Country cannot be blank.
+NotNull.userProfile.maleFemale = Choose Male or Female.
 
 DuplicateKey.userProfile.username = User Profile exists. Please log in.
 Duplicate.inventory.skuNum = A product already exists with that SKU number.
